# QueryMate

./: .gitignore  CMakeLists.txt  README.md  linkedin_post_draft.txt  main.cpp
include/core/: AssistantCore.h  CommandParser.h  LlamaInteraction.h  MemoryManager.h  ModelManager.h
include/termcolor/: termcolor.hpp
include/utils/: CLI.h  UIUtils.h
src/core/: AssistantCore.cpp  CommandParser.cpp  LLMInference.cpp  LlamaInteraction.cpp  MemoryManager.cpp  ModelManager.cpp
src/utils/: CLI.cpp  UIUtils.cpp
